fixed nav bar vertical alignment by adding margin-top of 10px

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -107,7 +107,7 @@
   .hamburger-ul {
     width: 100%;
     height: 40px;
-    margin: 0 auto;
+    margin-top: 10px;
     top: 0;
     text-align: center;
   }
